# insblue-portal

./: README.md  compose.yaml
frontend/insbluemin-filestash/: .gitignore  .rsyncignore  Dockerfile  compose.yaml  package-lock.json  package.json  requirements.txt  sync.sh  tailwind.config.js
frontend/insbluemin-filestash/certs/: cacert.pem
frontend/insbluemin-filestash/client/: README.md  config.py  pyproject.toml  run.py
frontend/insbluemin-filestash/client/app/filestash/: blueprint.py  views.py
frontend/insbluemin-filestash/client/app/filestash/templates/: filestash.jinja2
frontend/insbluemin-forms/: Dockerfile  docker-compose.yaml  docker-compose.yml  requirements.txt
frontend/insbluemin-forms/client/: .env.local  README.md  config.py.bk  pyproject.toml  run.py
frontend/insbluemin-forms/client/app/forms/: blueprint.py  utils.py.bk  version.py  views.py  views.py.bk
frontend/insbluemin-forms/client/app/forms/templates/: forms-form.jinja2  forms-submission-view.jinja2  forms-submissions.jinja2  forms.jinja2
frontend/insbluemin-forms/client/logs/: auth_manager.log.1
