[project]
name = "insbluemin-filestash"
version = "0.1.0"
description = "Forms Package"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Eduard C.", email = "eduard.c.milea@incdsb.ro" }
]
license = { text = "MIT" }
keywords = ["incdsb", "intranet"]
dependencies = [
    "pocketbase",
    "flask"
]

